# hc32f4a0_threadx_gcc

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  README_EN.md  find_rtt_blockaddr.bat  pyocd_flash.sh
.github/workflows/: cmake-multi-platform.yml
.marscode/: deviceInfo.json
drivers/: CMakeLists.txt  README.md
drivers/bsp/components/gt9xx/: gt9xx.c  gt9xx.h
drivers/bsp/components/nt35510/: nt35510.c  nt35510.h
drivers/bsp/components/ov5640/: ov5640.c  ov5640.h
drivers/bsp/components/rtl8201/: rtl8201.c  rtl8201.h
drivers/bsp/components/s29gl064n90tfi03/: s29gl064n90tfi03.c  s29gl064n90tfi03.h
drivers/bsp/components/tca9539/: tca9539.c  tca9539.h
drivers/bsp/ev_hc32f4a0_lqfp176/: ev_hc32f4a0_lqfp176.c  ev_hc32f4a0_lqfp176.h  ev_hc32f4a0_lqfp176_24cxx.c  ev_hc32f4a0_lqfp176_24cxx.h  ev_hc32f4a0_lqfp176_bsp.h  ev_hc32f4a0_lqfp176_gt9xx.c  ev_hc32f4a0_lqfp176_gt9xx.h  ev_hc32f4a0_lqfp176_is42s16400j7tli.c  ev_hc32f4a0_lqfp176_is42s16400j7tli.h  ev_hc32f4a0_lqfp176_is62wv51216.c  ev_hc32f4a0_lqfp176_is62wv51216.h  ev_hc32f4a0_lqfp176_mt29f2g08ab.c  ev_hc32f4a0_lqfp176_mt29f2g08ab.h  ev_hc32f4a0_lqfp176_nt35510.c  ev_hc32f4a0_lqfp176_nt35510.h  ev_hc32f4a0_lqfp176_ov5640.c  ev_hc32f4a0_lqfp176_ov5640.h  ev_hc32f4a0_lqfp176_rtl8201.c  ev_hc32f4a0_lqfp176_rtl8201.h  ev_hc32f4a0_lqfp176_tca9539.c  ev_hc32f4a0_lqfp176_tca9539.h  ev_hc32f4a0_lqfp176_w25qxx.c  ev_hc32f4a0_lqfp176_w25qxx.h  ev_hc32f4a0_lqfp176_wm8731.c  ev_hc32f4a0_lqfp176_wm8731.h
drivers/hc32_ll_driver/inc/: hc32_ll.h
drivers/hc32_ll_driver/src/: hc32_ll_can.c  hc32_ll_utility.c
drivers/linker/app/: HC32F4A0xG.ld  HC32F4A0xI.ld
drivers/linker/bootloader/: HC32F4A0xG.ld  HC32F4A0xI.ld
drivers/mcu/inc/: hc32f4xx_conf.h
drivers/rt-thread/linker/app/: HC32F4A0xG.ld  HC32F4A0xI.ld
drivers/rt-thread/linker/bootloader/: HC32F4A0xG.ld  HC32F4A0xI.ld
drivers/rt-thread/linker/normal/: HC32F4A0xG.ld  HC32F4A0xI.ld
drivers/toolchain/: gcc-arm-none-eabi.cmake
middlewares/threadx-6.4.2_rel/: CMakeLists.txt
middlewares/threadx-6.4.2_rel-segger/: CMakeLists.txt
middlewares/threadx-6.4.2_rel-segger/common/inc/: tx_api.h
middlewares/threadx-6.4.2_rel/common/inc/: tx_api.h
src/: main.c  tx_initialize_low_level.S
src/module/nr_micro_shell/inc/: nr_micro_shell_config.h  shell.h
src/module/nr_micro_shell/src/: shell.c
src/module/segger_rtt/inc/: rtt.h
src/module/segger_rtt/src/: rtt.c
tools/SEGGER_RTT_V798d/Config/: SEGGER_RTT_Conf.h
tools/SEGGER_RTT_V798d/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
tools/SEGGER_RTT_V798d/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
tools/SEGGER_RTT_V798d/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
tools/nr_micro_shell-1.0.2/src/: ansi.c  ansi_port.c  nr_micro_shell.c
